2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gparamspec.sgml: Small update  (#477704, Ross Burton)

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.2 ===

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/param_value_types.sgml: Add some discussion on 
	g_value_set_object() vs g_value_take_object().  (#477957, Davyd
	Madeley)

2007-09-19  Behdad Esfahbod  <behdad@gnome.org>

	* glib/building.sgml: Fix gettext URL. (#478349, kraai ftbfs.org)

2007-09-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.1 ===

2007-09-16  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/Makefile.am: Remove reference to trio

2007-09-11  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/error_reporting.sgml: Add an example.  (#474229,
	Rob Bradford)

2007-09-09  Behdad Esfahbod  <behdad@gnome.org>

	* glib/tmpl/warnings.sgml: Improve G_BREAKPOINT docs. (#474899)

2007-09-05  Behdad Esfahbod  <behdad@gnome.org>

	* glib/tmpl/glib-unused.sgml:
	* glib/tmpl/macros_misc.sgml:
	* glib/tmpl/main.sgml:
	* gobject/tmpl/gparamspec.sgml:

Tue Aug 28 19:04:12 2007  Tim Janik  <timj@gtk.org>

	* glib/tmpl/memory_slices.sgml: clarified alignment
	expectations for g_slice_alloc().

2007-08-20  Behdad Esfahbod  <behdad@gnome.org>

	* glib/tmpl/unicode.sgml: Document that GUnicodeScript is
	interchangeable with PangoScript.

2007-08-20  Behdad Esfahbod  <behdad@gnome.org>

	* glib/tmpl/spawn.sgml:
	Fix typos (#468694).

2007-08-15  Mikael Hallendal  <micke@imendio.com>

	* glib/tmpl/keyfile.sgml: Clearify that only comments can precede
	groups in Key-files. (#466768)

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.0 ===

2007-07-21  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Additions

2007-07-21  Matthias Clasen  <mclasen@redhat.com>
	
	* glib/tmpl/fileutils.sgml: Fix an inaccuracy in the
	G_FILE_TEST_IS_REGULAR docs, pointed out by
	Vincent Untz.  (#417068)
